changes in mobile view

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -19,7 +19,11 @@ body {
 .header .flex {
   display: flex;
 }
-
+@media screen and (max-width: 500px) {
+li img{
+  width:110px;
+}
+}
 .electric {
   font-weight: bold;
   font-family: Spartan;
